increased secure key length